tests/sksl/errors/LayoutRepeatedQualifiers.glsl
### Compilation failed:

error: 20: layout qualifier 'origin_upper_left' appears more than once
error: 21: layout qualifier 'override_coverage' appears more than once
error: 22: layout qualifier 'push_constant' appears more than once
error: 23: layout qualifier 'blend_support_all_equations' appears more than once
error: 24: layout qualifier 'srgb_unpremul' appears more than once
error: 25: layout qualifier 'key' appears more than once
error: 26: layout qualifier 'location' appears more than once
error: 27: layout qualifier 'offset' appears more than once
error: 28: layout qualifier 'binding' appears more than once
error: 29: layout qualifier 'index' appears more than once
error: 30: layout qualifier 'set' appears more than once
error: 31: layout qualifier 'builtin' appears more than once
error: 32: layout qualifier 'input_attachment_index' appears more than once
error: 33: layout qualifier 'max_vertices' appears more than once
error: 34: layout qualifier 'invocations' appears more than once
error: 35: layout qualifier 'when' appears more than once
error: 36: layout qualifier 'ctype' appears more than once
17 errors
